
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_SETSIZE ;
 int FD_ZERO (int *) ;
 int exit (int) ;
 int memset (char*,int ,int) ;
 int perror (char*) ;
 int read (int,char*,int) ;
 scalar_t__ select (int ,int *,int *,int *,struct timeval*) ;

int net_read(int fd, char *buf, int size, int timeout)
{
 fd_set fds;
 struct timeval wait;
 int n = -1;


 wait.tv_sec = timeout;
 wait.tv_usec = 0;

 memset(buf, 0, size);

 FD_ZERO(&fds);
 FD_SET(fd, &fds);


 if (select(FD_SETSIZE, &fds, ((void*)0), ((void*)0), &wait) < 0) {
  perror("select");
  exit(1);
 }


 if (FD_ISSET(fd, &fds))
  n = read(fd, buf, size);

 return n;
}
